--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Caixa - Controle Diário</title>
     <link rel="stylesheet" href="styles.css" />
+    <link rel="icon" href="/assets/favicon2.png" type="image/png" />
   </head>
 
   <body>
