--- a/index.html
+++ b/index.html
@@ -3,202 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Caixa - Controle Diário</title>
-    <link rel="stylesheet" href="styles.css" />
-    <link rel="icon" href="/assets/favicon2.png" type="image/png" />
+    <title>...</title>
   </head>
-
-  <body>
-    <div class="header">
-      <h2>CAIXA - CONTROLE DIÁRIO</h2>
-      <!-- Informações de usuário e data-->
-      <div class="user-info">
-        <div>
-          <label for="nomeUsuario">Usuário</label>
-          <input type="text" id="nomeUsuario" placeholder="Digite seu nome" />
-        </div>
-        <div>
-          <label for="data">Data</label>
-          <input
-            type="date"
-            id="data"
-            onfocus="this.showPicker()"
-            onchange="carregarDados()"
-          />
-        </div>
-      </div>
-    </div>
-
-    <div class="container">
-      <!-- Container flex que contém todo o conteúdo das contas -->
-      <div class="flex-container">
-        <!-- Coluna 1 -->
-        <div class="coluna1">
-          <h3>Entradas de Valores</h3>
-          <!-- Seção Dinheiro -->
-          <div class="input-with-button">
-            <label for="dinheiro">Dinheiro</label>
-            <input
-              type="text"
-              id="dinheiro"
-              placeholder="00,00"
-              oninput="formatarNumeroInput(this); atualizarResumo()"
-            />
-          </div>
-          <!-- Seção Cartão -->
-          <div>
-            <div class="input-with-button">
-              <label for="inputCartao">Cartão</label>
-              <input
-                type="text"
-                id="inputCartao"
-                placeholder="00,00"
-                oninput="formatarNumeroInput(this)"
-                onkeydown="verificarEnter(event, 'cartao', 'inputCartao')"
-              />
-              <button onclick="adicionarValor('cartao', 'inputCartao')">
-                Adicionar
-              </button>
-            </div>
-            <ul id="cartao"></ul>
-          </div>
-          <!-- Seção Pix -->
-          <div>
-            <div class="input-with-button">
-              <label for="inputPix">Pix</label>
-              <input
-                type="text"
-                id="inputPix"
-                placeholder="00,00"
-                oninput="formatarNumeroInput(this)"
-                onkeydown="verificarEnter(event, 'pix', 'inputPix')"
-              />
-              <button onclick="adicionarValor('pix', 'inputPix')">
-                Adicionar
-              </button>
-            </div>
-            <ul id="pix"></ul>
-          </div>
-          <!-- Seção Vale -->
-          <div>
-            <div class="input-with-button">
-              <label for="inputVale">Vale</label>
-              <input
-                type="text"
-                id="inputVale"
-                placeholder="00,00"
-                oninput="formatarNumeroInput(this)"
-                onkeydown="verificarEnter(event, 'vale', 'inputVale')"
-              />
-              <button onclick="adicionarValor('vale', 'inputVale')">
-                Adicionar
-              </button>
-            </div>
-            <ul id="vale"></ul>
-          </div>
-          <!-- Seção Resgate -->
-          <div>
-            <div class="input-with-button">
-              <label for="inputResgate">Resgate</label>
-              <input
-                type="text"
-                id="inputResgate"
-                placeholder="00,00"
-                oninput="formatarNumeroInput(this)"
-                onkeydown="verificarEnter(event, 'resgate', 'inputResgate')"
-              />
-              <button onclick="adicionarValor('resgate', 'inputResgate')">
-                Adicionar
-              </button>
-            </div>
-            <ul id="resgate"></ul>
-          </div>
-        </div>
-        <!-- Coluna 2 -->
-        <div class="coluna2">
-          <h3>Moedas e Suprimento</h3>
-          <!-- Seção Moedas Cima -->
-          <div class="input-with-text">
-            <label for="moedasC">Moedas de Cima</label>
-            <input
-              type="text"
-              id="moedasC"
-              placeholder="00,00"
-              oninput="formatarNumeroInput(this); atualizarResumo()"
-            />
-          </div>
-          <!-- Seção Moedas Baixo -->
-          <div class="input-with-text">
-            <label for="moedasB">Moedas de Baixo</label>
-            <input
-              type="text"
-              id="moedasB"
-              placeholder="00,00"
-              oninput="formatarNumeroInput(this); atualizarResumo()"
-            />
-          </div>
-
-          <!-- Seção Moedas a Pagar -->
-          <div class="input-with-text">
-            <label for="moedasPagar">Moedas a Pagar</label>
-            <input
-              type="text"
-              id="moedasPagar"
-              placeholder="00,00"
-              oninput="formatarNumeroInput(this); atualizarResumo()"
-            />
-          </div>
-
-          <!-- Seção Valor Pago -->
-          <div class="input-with-text">
-            <label for="valorPago">Valor Pago</label>
-            <input
-              type="text"
-              id="valorPago"
-              placeholder="00,00"
-              oninput="formatarNumeroInput(this); atualizarResumo()"
-            />
-          </div>
-
-          <!-- Seção Suprimento -->
-          <div class="input-with-text">
-            <label for="suprimento">Suprimento</label>
-            <input
-              type="text"
-              id="suprimento"
-              placeholder="00,00"
-              oninput="formatarNumeroInput(this)"
-            />
-          </div>
-          <!-- Seção Observações -->
-          <div class="obs input-with-text">
-            <label for="obs">Observações</label>
-            <textarea id="obs"></textarea>
-          </div>
-        </div>
-        <div class="coluna3">
-          <h3>Resumo</h3>
-          <!-- Seção Resumo -->
-          <div class="resumo">
-            <p>Dinheiro: <span id="totalDinheiro">00,00</span></p>
-            <p>Moedas: <span id="totalMoedas">00,00</span></p>
-            <p>Troco: <span id="totalTroco">00,00</span></p>
-            <p>Cartão: <span id="totalCartao">00,00</span></p>
-            <p>Vale: <span id="totalVale">00,00</span></p>
-            <p>Pix: <span id="totalPix">00,00</span></p>
-            <p>Resgate: <span id="totalResgate">00,00</span></p>
-            <h3>Total: <span id="totalGeral">00,00</span></h3>
-            <div class="buttons-save-delete">
-              <button class="btn-save-data" id="salvarButton">Salvar</button>
-              <button class="btn-delete-data" onclick="limparDados()">
-                Limpar Dados
-              </button>
-            </div>
-            <button onclick="salvarDadosCSV()">Baixar Arquivo</button>
-          </div>
-        </div>
-      </div>
-    </div>
-    <script src="script.js"></script>
-  </body>
+  <body></body>
 </html>
